--- a/views/student/layouts/course-middle.ejs
+++ b/views/student/layouts/course-middle.ejs
@@ -66,8 +66,9 @@
                                 </p>
                                 <p class="wrapbox auto">
                                     <b>7. Array and String </b>
-                                    <br><a href="/course-Array_and_String">เนื้อหาบทเรียน</a>
-                                    <!--<br><a href="/course-Loop_Statement-quiz">แบบทดสอบหลังเรียน</a>-->
+                                    <br><a href="/course-Arrays_and_Strings-pretest">แบบทดสอบก่อนเรียน</a>
+                                    <br><a href="/course-Arrays_and_Strings">เนื้อหาบทเรียน</a>
+                                    <br><a href="/course-Arrays_and_Strings-quiz">แบบทดสอบหลังเรียน</a>
                                 </p>
                                 <p class="wrapbox auto">
                                     <b>8. Functions </b>
