--- a/views/student/pretest/6_Loop_Statements-pretest.ejs
+++ b/views/student/pretest/6_Loop_Statements-pretest.ejs
@@ -411,16 +411,20 @@
                         </b></p>
                     <input type="radio" class="btn-check" name="choice12" id="choice12-1" autocomplete="off" value="A" required>
                     <label class="list-group-item btn-outline-dark list-group-item-action" for="choice12-1">
-                        โค้ดนี้ใช้ do while loop เพื่อพิมพ์ค่าของตัวแปร i ที่เริ่มจาก 10 และทำงานจนกว่า i จะมากกว่าหรือเท่ากับ 0 ในแต่ละรอบของลูปจะแสดงค่าของ i และลด i ลง 3 ในทุกๆ รอบ ผลลัพธ์ที่จะถูกพิมพ์ออกทางหน้าจอคือ "10 7 4 1"                    </label>
+                        โค้ดนี้ใช้ do while loop เพื่อพิมพ์ค่าของตัวแปร i ที่เริ่มจาก 10 และทำงานจนกว่า i จะมากกว่าหรือเท่ากับ 0 ในแต่ละรอบของลูปจะแสดงค่าของ i และลด i ลง 3 ในทุกๆ รอบ ผลลัพธ์ที่จะถูกพิมพ์ออกทางหน้าจอคือ "10 7 4 1"                    
+                    </label>
                     <input type="radio" class="btn-check" name="choice12" id="choice12-2" autocomplete="off" value="B">
                     <label class="list-group-item btn-outline-dark list-group-item-action" for="choice12-2">
-                        โค้ดนี้ใช้ for loop เพื่อพิมพ์ค่าของตัวแปร i ที่เริ่มจาก 10 และทำงานจนกว่า i จะมากกว่าหรือเท่ากับ 0 ในแต่ละรอบของลูปจะแสดงค่าของ i และลด i ลง 3 ในทุกๆ รอบ ผลลัพธ์ที่จะถูกพิมพ์ออกทางหน้าจอคือ "10 7 4 1"                    </label>
+                        โค้ดนี้ใช้ for loop เพื่อพิมพ์ค่าของตัวแปร i ที่เริ่มจาก 10 และทำงานจนกว่า i จะมากกว่าหรือเท่ากับ 0 ในแต่ละรอบของลูปจะแสดงค่าของ i และลด i ลง 3 ในทุกๆ รอบ ผลลัพธ์ที่จะถูกพิมพ์ออกทางหน้าจอคือ "10 7 4 1"                    
+                    </label>
                     <input type="radio" class="btn-check" name="choice12" id="choice12-3" autocomplete="off" value="C">
                     <label class="list-group-item btn-outline-dark list-group-item-action" for="choice12-3">
-                        โค้ดนี้ใช้ while loop เพื่อพิมพ์ค่าของตัวแปร i ที่เริ่มจาก 10 และทำงานจนกว่า i จะมากกว่าหรือเท่ากับ 0 ในแต่ละรอบของลูปจะแสดงค่าของ i และลด i ลง 2 ในทุกๆ รอบ ผลลัพธ์ที่จะถูกพิมพ์ออกทางหน้าจอคือ "10 8 6 4 2 0"                    </label>
+                        โค้ดนี้ใช้ while loop เพื่อพิมพ์ค่าของตัวแปร i ที่เริ่มจาก 10 และทำงานจนกว่า i จะมากกว่าหรือเท่ากับ 0 ในแต่ละรอบของลูปจะแสดงค่าของ i และลด i ลง 2 ในทุกๆ รอบ ผลลัพธ์ที่จะถูกพิมพ์ออกทางหน้าจอคือ "10 8 6 4 2 0"                    
+                    </label>
                     <input type="radio" class="btn-check" name="choice12" id="choice12-4" autocomplete="off" value="D">
                     <label class="list-group-item btn-outline-dark list-group-item-action" for="choice12-4">
-                        โค้ดนี้ใช้ while loop เพื่อพิมพ์ค่าของตัวแปร i ที่เริ่มจาก 10 และทำงานจนกว่า i จะมากกว่าหรือเท่ากับ 0 ในแต่ละรอบของลูปจะแสดงค่าของ i และลด i ลง 3 ในทุกๆ รอบ ผลลัพธ์ที่จะถูกพิมพ์ออกทางหน้าจอคือ "10 7 4 1"                    </label>
+                        โค้ดนี้ใช้ while loop เพื่อพิมพ์ค่าของตัวแปร i ที่เริ่มจาก 10 และทำงานจนกว่า i จะมากกว่าหรือเท่ากับ 0 ในแต่ละรอบของลูปจะแสดงค่าของ i และลด i ลง 3 ในทุกๆ รอบ ผลลัพธ์ที่จะถูกพิมพ์ออกทางหน้าจอคือ "10 7 4 1"                    
+                    </label>
                 </div><br>  
                 <!-- ข้อ 13  -->
                 <div class="list-group">
@@ -440,16 +444,20 @@
                         </b></p>
                     <input type="radio" class="btn-check" name="choice13" id="choice13-1" autocomplete="off" value="A" required>
                     <label class="list-group-item btn-outline-dark list-group-item-action" for="choice13-1">
-                        โค้ดนี้ใช้ do while loop เพื่อพิมพ์ค่าของตัวแปร x ที่เริ่มจาก 28 และทำงานจนกว่า x จะมากกว่าเท่ากับ 0 ในแต่ละรอบของลูปจะแสดงค่าของ x และลด x ลง 3 ในทุกๆ รอบ ผลลัพธ์ที่จะถูกพิมพ์ออกทางหน้าจอคือ "28 25 22 19 16 13 10 7 4 1 0"                    </label>
+                        โค้ดนี้ใช้ do while loop เพื่อพิมพ์ค่าของตัวแปร x ที่เริ่มจาก 28 และทำงานจนกว่า x จะมากกว่าเท่ากับ 0 ในแต่ละรอบของลูปจะแสดงค่าของ x และลด x ลง 3 ในทุกๆ รอบ ผลลัพธ์ที่จะถูกพิมพ์ออกทางหน้าจอคือ "28 25 22 19 16 13 10 7 4 1 0"                    
+                    </label>
                     <input type="radio" class="btn-check" name="choice13" id="choice13-2" autocomplete="off" value="B">
                     <label class="list-group-item btn-outline-dark list-group-item-action" for="choice13-2">
-                        โค้ดนี้ใช้ do while loop เพื่อพิมพ์ค่าของตัวแปร x ที่เริ่มจาก 28 และทำงานจนกว่า x จะมากกว่า 0 ในแต่ละรอบของลูปจะแสดงค่าของ x และลด x ลง 3 ในทุกๆ รอบ ผลลัพธ์ที่จะถูกพิมพ์ออกทางหน้าจอคือ "28 22 19 16 13 10 7 4 1"                    </label>
+                        โค้ดนี้ใช้ do while loop เพื่อพิมพ์ค่าของตัวแปร x ที่เริ่มจาก 28 และทำงานจนกว่า x จะมากกว่า 0 ในแต่ละรอบของลูปจะแสดงค่าของ x และลด x ลง 3 ในทุกๆ รอบ ผลลัพธ์ที่จะถูกพิมพ์ออกทางหน้าจอคือ "28 22 19 16 13 10 7 4 1"                    
+                    </label>
                     <input type="radio" class="btn-check" name="choice13" id="choice13-3" autocomplete="off" value="C">
                     <label class="list-group-item btn-outline-dark list-group-item-action" for="choice13-3">
-                        โค้ดนี้ใช้ while loop เพื่อพิมพ์ค่าของตัวแปร x ที่เริ่มจาก 28 และทำงานจนกว่า x จะมากกว่า 0 ในแต่ละรอบของลูปจะแสดงค่าของ x และลด x ลง 3 ในทุกๆ รอบ ผลลัพธ์ที่จะถูกพิมพ์ออกทางหน้าจอคือ "28 25 22 19 16 13 10 7 4 1"                    </label>
+                        โค้ดนี้ใช้ while loop เพื่อพิมพ์ค่าของตัวแปร x ที่เริ่มจาก 28 และทำงานจนกว่า x จะมากกว่า 0 ในแต่ละรอบของลูปจะแสดงค่าของ x และลด x ลง 3 ในทุกๆ รอบ ผลลัพธ์ที่จะถูกพิมพ์ออกทางหน้าจอคือ "28 25 22 19 16 13 10 7 4 1"                    
+                    </label>
                     <input type="radio" class="btn-check" name="choice13" id="choice13-4" autocomplete="off" value="D">
                     <label class="list-group-item btn-outline-dark list-group-item-action" for="choice13-4">
-                        โค้ดนี้ใช้ do while loop เพื่อพิมพ์ค่าของตัวแปร x ที่เริ่มจาก 28 และทำงานจนกว่า x จะมากกว่า 0 ในแต่ละรอบของลูปจะแสดงค่าของ x และลด x ลง 3 ในทุกๆ รอบ ผลลัพธ์ที่จะถูกพิมพ์ออกทางหน้าจอคือ "28 25 22 19 16 13 10 7 4 1"                    </label>
+                        โค้ดนี้ใช้ do while loop เพื่อพิมพ์ค่าของตัวแปร x ที่เริ่มจาก 28 และทำงานจนกว่า x จะมากกว่า 0 ในแต่ละรอบของลูปจะแสดงค่าของ x และลด x ลง 3 ในทุกๆ รอบ ผลลัพธ์ที่จะถูกพิมพ์ออกทางหน้าจอคือ "28 25 22 19 16 13 10 7 4 1"                    
+                    </label>
                 </div><br>  
                 <!-- ข้อ 14  -->
                 <div class="list-group">
@@ -470,13 +478,16 @@
                         </b></p>
                     <input type="radio" class="btn-check" name="choice14" id="choice14-1" autocomplete="off" value="A" required>
                     <label class="list-group-item btn-outline-dark list-group-item-action" for="choice14-1">
-                        โค้ดนี้ใช้ nested for loop (ลูปซ้อนลูป) เพื่อพิมพ์ค่าของตัวแปร i และ j ที่เริ่มจาก 1 และทำงานตามเงื่อนไขในลูป โดยในแต่ละรอบของลูปภายในจะแสดงค่าของ i และ j แล้วเพิ่ม j ไป 1 ในทุกๆ รอบภายใน ผลลัพธ์ที่จะถูกพิมพ์ออกทางหน้าจอคือ "12 11 21 22 31 32"                    </label>
+                        โค้ดนี้ใช้ nested for loop (ลูปซ้อนลูป) เพื่อพิมพ์ค่าของตัวแปร i และ j ที่เริ่มจาก 1 และทำงานตามเงื่อนไขในลูป โดยในแต่ละรอบของลูปภายในจะแสดงค่าของ i และ j แล้วเพิ่ม j ไป 1 ในทุกๆ รอบภายใน ผลลัพธ์ที่จะถูกพิมพ์ออกทางหน้าจอคือ "12 11 21 22 31 32"                    
+                    </label>
                     <input type="radio" class="btn-check" name="choice14" id="choice14-2" autocomplete="off" value="B">
                     <label class="list-group-item btn-outline-dark list-group-item-action" for="choice14-2">
-                        โค้ดนี้ใช้ nested for while loop (ลูปซ้อนลูป) เพื่อพิมพ์ค่าของตัวแปร i และ j ที่เริ่มจาก 1 และทำงานตามเงื่อนไขในลูป โดยในแต่ละรอบของลูปภายในจะแสดงค่าของ i และ j แล้วเพิ่ม j ไป 1 ในทุกๆ รอบภายใน ผลลัพธ์ที่จะถูกพิมพ์ออกทางหน้าจอคือ "11 12 21 22 31 32"                    </label>
+                        โค้ดนี้ใช้ nested for while loop (ลูปซ้อนลูป) เพื่อพิมพ์ค่าของตัวแปร i และ j ที่เริ่มจาก 1 และทำงานตามเงื่อนไขในลูป โดยในแต่ละรอบของลูปภายในจะแสดงค่าของ i และ j แล้วเพิ่ม j ไป 1 ในทุกๆ รอบภายใน ผลลัพธ์ที่จะถูกพิมพ์ออกทางหน้าจอคือ "11 12 21 22 31 32"                    
+                    </label>
                     <input type="radio" class="btn-check" name="choice14" id="choice14-3" autocomplete="off" value="C">
                     <label class="list-group-item btn-outline-dark list-group-item-action" for="choice14-3">
-                        โค้ดนี้ใช้ nested for loop (ลูปซ้อนลูป) เพื่อพิมพ์ค่าของตัวแปร i และ j ที่เริ่มจาก 1 และทำงานตามเงื่อนไขในลูป โดยในแต่ละรอบของลูปภายในจะแสดงค่าของ i และ j แล้วเพิ่ม j ไป 1 ในทุกๆ รอบภายใน ผลลัพธ์ที่จะถูกพิมพ์ออกทางหน้าจอคือ "11 12 21 22 31 32"                    </label>
+                        โค้ดนี้ใช้ nested for loop (ลูปซ้อนลูป) เพื่อพิมพ์ค่าของตัวแปร i และ j ที่เริ่มจาก 1 และทำงานตามเงื่อนไขในลูป โดยในแต่ละรอบของลูปภายในจะแสดงค่าของ i และ j แล้วเพิ่ม j ไป 1 ในทุกๆ รอบภายใน ผลลัพธ์ที่จะถูกพิมพ์ออกทางหน้าจอคือ "11 12 21 22 31 32"                    
+                    </label>
                     <input type="radio" class="btn-check" name="choice14" id="choice14-4" autocomplete="off" value="D">
                     <label class="list-group-item btn-outline-dark list-group-item-action" for="choice14-4">
                         ถูกทุกข้อ
@@ -505,16 +516,20 @@
                         </b></p>
                     <input type="radio" class="btn-check" name="choice15" id="choice15-1" autocomplete="off" value="A" required>
                     <label class="list-group-item btn-outline-dark list-group-item-action" for="choice15-1">
-                        เริ่มต้นด้วยการใช้ for loop เพื่อพิมพ์ตัวเลขจาก 1 ถึง 5 ได้ผลเป็น "0 1 2 3 4 5" และใช้ while loop เพื่อพิมพ์ตัวเลขจาก 10 ถึง 6 ได้ผลเป็น "10 9 8 7 6"                    </label>
+                        เริ่มต้นด้วยการใช้ for loop เพื่อพิมพ์ตัวเลขจาก 1 ถึง 5 ได้ผลเป็น "0 1 2 3 4 5" และใช้ while loop เพื่อพิมพ์ตัวเลขจาก 10 ถึง 6 ได้ผลเป็น "10 9 8 7 6"                    
+                    </label>
                     <input type="radio" class="btn-check" name="choice15" id="choice15-2" autocomplete="off" value="B">
                     <label class="list-group-item btn-outline-dark list-group-item-action" for="choice15-2">
-                        เริ่มต้นด้วยการใช้ while loop เพื่อพิมพ์ตัวเลขจาก 1 ถึง 6 ได้ผลเป็น "1 2 3 4 5 6" และใช้ for loop เพื่อพิมพ์ตัวเลขจาก 10 ถึง 5 ได้ผลเป็น "10 9 8 7 5"                    </label>
+                        เริ่มต้นด้วยการใช้ while loop เพื่อพิมพ์ตัวเลขจาก 1 ถึง 6 ได้ผลเป็น "1 2 3 4 5 6" และใช้ for loop เพื่อพิมพ์ตัวเลขจาก 10 ถึง 5 ได้ผลเป็น "10 9 8 7 5"                    
+                    </label>
                     <input type="radio" class="btn-check" name="choice15" id="choice15-3" autocomplete="off" value="C">
                     <label class="list-group-item btn-outline-dark list-group-item-action" for="choice15-3">
-                        เริ่มต้นด้วยการใช้ for loop เพื่อพิมพ์ตัวเลขจาก 1 ถึง 5 ได้ผลเป็น "1 2 3 4 5" และใช้ while loop เพื่อพิมพ์ตัวเลขจาก 10 ถึง 6 ได้ผลเป็น "10 9 8 7 6"                    </label>
+                        เริ่มต้นด้วยการใช้ for loop เพื่อพิมพ์ตัวเลขจาก 1 ถึง 5 ได้ผลเป็น "1 2 3 4 5" และใช้ while loop เพื่อพิมพ์ตัวเลขจาก 10 ถึง 6 ได้ผลเป็น "10 9 8 7 6"                    
+                    </label>
                     <input type="radio" class="btn-check" name="choice15" id="choice15-4" autocomplete="off" value="D">
                     <label class="list-group-item btn-outline-dark list-group-item-action" for="choice15-4">
-                        เริ่มต้นด้วยการใช้ while loop เพื่อพิมพ์ตัวเลขจาก 1 ถึง 5 ได้ผลเป็น "1 2 3 4 5" และใช้ for loop เพื่อพิมพ์ตัวเลขจาก 10 ถึง 6 ได้ผลเป็น "10 9 8 7 6"                    </label>
+                        เริ่มต้นด้วยการใช้ while loop เพื่อพิมพ์ตัวเลขจาก 1 ถึง 5 ได้ผลเป็น "1 2 3 4 5" และใช้ for loop เพื่อพิมพ์ตัวเลขจาก 10 ถึง 6 ได้ผลเป็น "10 9 8 7 6"                    
+                    </label>
                 </div><br>  
         <%# LV4 %>                
                 <h2>ข้อที่ 16 - 20: วัดความสามารถด้านการเขียนโปรแกรม (Writing)</h2> 
