--- a/views/student/pretest/7_Arrays_and_Strings-pretest.ejs
+++ b/views/student/pretest/7_Arrays_and_Strings-pretest.ejs
@@ -212,10 +212,10 @@
                 <!-- ข้อ 7 -->
                 <div class="list-group">
                     <p type="text" class="list-group-item p2" style="color: white;">
-                        7. จากโค้ดนี้  <br>
+                        7. จากโค้ดนี้
                     <b style="font-weight: lighter;"> 
-                        <br>&ensp;char text[ ] = "programming";
-                         <br>     
+                        <br>&ensp;char text[ ] = "programming"; 
+                        <br>
                     </b>ค่า text[5] คืออะไร
                     </p>
                     
@@ -239,7 +239,7 @@
                 <!-- ข้อ 8 -->
                 <div class="list-group">
                     <p type="text" class="list-group-item p2" style="color: white;">
-                        8. หลังจากการทำงานของโค้ดนี้ ค่าที่จะถูกพิมพ์ออกทางหน้าจอคืออะไร <br>
+                        8. หลังจากการทำงานของโค้ดนี้ ค่าที่จะถูกพิมพ์ออกทางหน้าจอคืออะไร
                     <b style="font-weight: lighter;"> 
                         <br>&ensp;#include < stdio.h> 
                         <br>&ensp;int main() 
@@ -275,7 +275,7 @@
                 <!-- ข้อ 9 -->
                 <div class="list-group">
                     <p type="text" class="list-group-item p2" style="color: white;">   
-                        9. หลังจากการทำงานของโค้ดนี้ ค่าที่จะถูกพิมพ์ออกทางหน้าจอคืออะไร <br>
+                        9. หลังจากการทำงานของโค้ดนี้ ค่าที่จะถูกพิมพ์ออกทางหน้าจอคืออะไร 
                     <b style="font-weight: lighter;"> 
                         <br>&ensp;#include < stdio.h> 
                         <br>&ensp;#include < string.h >
@@ -310,7 +310,7 @@
                 <!-- ข้อ 10 -->
                 <div class="list-group">
                     <p type="text" class="list-group-item p2" style="color: white;">
-                        10. หลังจากการทำงานของโค้ดนี้ ค่าที่จะถูกพิมพ์ออกทางหน้าจอคืออะไร <br>
+                        10. หลังจากการทำงานของโค้ดนี้ ค่าที่จะถูกพิมพ์ออกทางหน้าจอคืออะไร 
                         <b style="font-weight: lighter;"> 
                             <br>&ensp;#include < stdio.h> 
                             <br>&ensp;#include < string.h >
@@ -346,7 +346,7 @@
                 <!-- ข้อ 11 -->
                 <div class="list-group">
                     <p type="text" class="list-group-item list-group-item-action bg-dark" style="color: white;">
-                        11. โค้ดดังต่อไปนี้ทำงานอย่างไร <br>
+                        11. โค้ดดังต่อไปนี้ทำงานอย่างไร 
                         <b style="font-weight: lighter;"> 
                             <br>&ensp;int numbers[8] = {1, 2, 3, 4, 5, 6, 7, 8};
                             <br>&ensp;int sum = 0;
@@ -374,7 +374,7 @@
                 <!-- ข้อ 12  -->
                 <div class="list-group">
                     <p type="text" class="list-group-item list-group-item-action bg-dark" style="color: white;">
-                        12. โค้ดดังต่อไปนี้ทำงานอย่างไร <br>
+                        12. โค้ดดังต่อไปนี้ทำงานอย่างไร 
                         <b style="font-weight: lighter;"> 
                             <br>&ensp;#include < stdio.h> 
                             <br>&ensp;int main() 
@@ -414,7 +414,7 @@
                 <!-- ข้อ 13  -->
                 <div class="list-group">
                     <p type="text" class="list-group-item list-group-item-action bg-dark" style="color: white;">
-                        13. ข้อใดอธิบายการทำงานได้ถูกต้อง <br>
+                        13. ข้อใดอธิบายการทำงานได้ถูกต้อง 
                         <b style="font-weight: lighter;"> 
                             <br>&ensp;#include < stdio.h> 
                             <br>&ensp;int main() 
@@ -461,7 +461,7 @@
                 <!-- ข้อ 14  -->
                 <div class="list-group">
                     <p type="text" class="list-group-item list-group-item-action bg-dark" style="color: white;">
-                        14. ข้อใดอธิบายการทำงานได้ถูกต้อง <br>
+                        14. ข้อใดอธิบายการทำงานได้ถูกต้อง 
                         <b style="font-weight: lighter;"> 
                             <br>&ensp;#include < stdio.h> 
                             <br>&ensp;#include <string.h></string.h>
@@ -495,7 +495,7 @@
                 <!-- ข้อ 15 -->
                 <div class="list-group">
                     <p type="text" class="list-group-item list-group-item-action bg-dark" style="color: white;">
-                        15. ข้อใดอธิบายการทำงานได้ถูกต้อง <br>
+                        15. ข้อใดอธิบายการทำงานได้ถูกต้อง 
                         <b style="font-weight: lighter;"> 
                             <br>&ensp;#include < stdio.h> 
                             <br>&ensp;#include <string.h></string.h>
@@ -519,6 +519,7 @@
                     <input type="radio" class="btn-check" name="choice15" id="choice15-1" autocomplete="off" value="A" required>
                     <label class="list-group-item btn-outline-dark list-group-item-action" for="choice15-1">
                         โค้ดนี้เป็นโปรแกรมที่ใช้ตรวจสอบชื่อผู้ใช้ที่ผู้ใช้ป้อนเข้ามาว่าตรงกับรหัสผ่านที่กำหนดหรือไม่ โดยใช้ strcmp( ) ทำการเปลี่ยน String ถ้าผลลัพธ์เป็น 0 แสดงว่าเหมือนกัน แสดงข้อความ "Passwords match!" และถ้าไม่ใช่ 0 แสดงว่าไม่เหมือนกัน แสดงข้อความ "Passwords do not match!"
+                    </label>
                         <input type="radio" class="btn-check" name="choice15" id="choice15-2" autocomplete="off" value="B">
                     <label class="list-group-item btn-outline-dark list-group-item-action" for="choice15-2">
                         โค้ดนี้เป็นโปรแกรมที่ใช้ตรวจสอบรหัสผ่านที่ผู้ใช้ป้อนเข้ามาว่าตรงกับรหัสผ่านที่กำหนดหรือไม่ โดยใช้ strcmp( ) ทำการเปลี่ยน String ถ้าผลลัพธ์เป็น 0 แสดงว่าเหมือนกัน แสดงข้อความ "Passwords do not match!" และถ้าไม่ใช่ 0 แสดงว่าไม่เหมือนกัน แสดงข้อความ "Passwords match!"
