แก้คำผิด pre/post-test 7

--- a/views/student/pretest/7_Arrays_and_Strings-pretest.ejs
+++ b/views/student/pretest/7_Arrays_and_Strings-pretest.ejs
@@ -464,7 +464,7 @@
                         14. ข้อใดอธิบายการทำงานได้ถูกต้อง 
                         <b style="font-weight: lighter;"> 
                             <br>&ensp;#include < stdio.h> 
-                            <br>&ensp;#include <string.h></string.h>
+                            <br>&ensp;#include < string.h >
                             <br>&ensp;int main() 
                             <br>&ensp;{ 
                             <br>&ensp;&ensp;char str[100];
@@ -498,7 +498,7 @@
                         15. ข้อใดอธิบายการทำงานได้ถูกต้อง 
                         <b style="font-weight: lighter;"> 
                             <br>&ensp;#include < stdio.h> 
-                            <br>&ensp;#include <string.h></string.h>
+                            <br>&ensp;#include < string.h >
                             <br>&ensp;void main() 
                             <br>&ensp;{ 
                             <br>&ensp;&ensp;char password[ ] = "password";
