--- a/views/student/quiz/7_Arrays_and_Strings-quiz.ejs
+++ b/views/student/quiz/7_Arrays_and_Strings-quiz.ejs
@@ -40,7 +40,7 @@
     <link rel='stylesheet' href='stylesheets/compiler_line.css' />
     <link rel='stylesheet' href='stylesheets/Drag_Drop.css' />
     <link rel="stylesheet" href="stylesheets/quiz.css">
-    <title>(Pre-test) Arrays and Strings</title>
+    <title>(Post-test) Arrays and Strings</title>
 </head>
 
 <body>
@@ -55,7 +55,7 @@
         <div class="accordion" id="accordionParentSyntax">
             <!--   Introduce -->
             <div id="collapseIntroduce" class="accordion-collapse collapse show" data-bs-parent="#accordionParentSyntax">
-                <h1>Arrays and Strings (Pre-test)</h1>
+                <h1>Arrays and Strings (Post-test)</h1>
                 
                 <ol class="breadcrumb">
                     <li class="breadcrumb-item"><i href="/home" class="fa fa-home" style="font-size:16px"></i></li>
