pre/post-test 8

--- a/views/student/layouts/course-middle.ejs
+++ b/views/student/layouts/course-middle.ejs
@@ -72,8 +72,9 @@
                                 </p>
                                 <p class="wrapbox auto">
                                     <b>8. Functions </b>
+                                    <br><a href="/course-Functions-pretest">แบบทดสอบก่อนเรียน</a>
                                     <br><a href="/course-Functions">เนื้อหาบทเรียน</a>
-                                    <!--<br><a href="/course-Pointers-quiz">แบบทดสอบหลังเรียน</a>-->
+                                    <br><a href="/course-Functions-quiz">แบบทดสอบหลังเรียน</a>
                                 </p>
                                 <!--<p class="wrapbox auto">
                                     <b>8. Functions </b>
