--- a/views/student/course/course_main.ejs
+++ b/views/student/course/course_main.ejs
@@ -52,9 +52,9 @@
         <!-- ASSIGNMENT STATUS -->
         <%- include('../layouts/course-middle_Score') %>
 
-        <!-- COMPETENCY  
-        <%- include('../layouts/recommen_Competency') %>-->
-        </div><br>
+        <!-- COMPETENCY  -->
+        <%- include('../layouts/recommen_Competency') %>
+        </div>
 
 
 <%- include('../layouts/footer') %>
