--- a/views/student/layouts/recommen_Competency.ejs
+++ b/views/student/layouts/recommen_Competency.ejs
@@ -1,10 +1,72 @@
 <div id = "content" class="container">
     <br>
     <h1 id = 'content'><i class="far fa-sun"></i>Competency Recommendation </h1> 
+   <style>
+
+    .com {
+        background-color: #fdfdfd;
+        border: 1px solid #000;
+        border-collapse: collapse;
+        font-family: Sans-Serif;
+        color: #000;
+    }
+    .quiz {
+        width: 350px;
+        border: 1px solid #000;
+        padding: .5rem;
+    }
+    .comth {
+        width: 150px;
+        border: 1px solid #000;
+        padding: .5rem;
+        text-align: center;
+    }
+    td {
+        padding: 20px;
+        border: 0.5px solid #000;
+    }
+   </style>
+
+
    
-</div>
 
+    <table class="com">
+        <tr>
+          <th class="quiz">Quiz</th>
+          <th class="comth">Knowledge</th>
+          <th class="comth">Tracing</th>
+          <th class="comth">Explaining</th>
+        </tr>
+        <tr>
+        <td>Algorithms and Flowcharts</td>
+        
+        </tr>
+        <tr>
+          <td>Datatype and Variable</td>  
+        </tr>
+        <tr>
+           <td>Input and Output</td> 
+        </tr>
+        <tr>
+            <td>Operators and Expressions</td>
+        </tr>
+        <tr>
+           <td>Selection Statements</td> 
+        </tr>
+        <tr>
+            <td>Loop Statements</td>
+        </tr>
+        <tr>
+            <td>Array and String</td>
+        </tr>
+        <tr>
+            <td>Functions</td>
+        </tr>
+      </table>
 
+      <br><br>
 
   
       <!-- Modal -->
+
+          
