--- a/views/student/pretest/1_Algorithms_and_Flowcharts-pretest.ejs
+++ b/views/student/pretest/1_Algorithms_and_Flowcharts-pretest.ejs
@@ -71,6 +71,26 @@
                 </ol> <br>
 
 <%# START %> 
+    <script>
+        var timerVar = setInterval(countTimer, 1000);
+var totalSeconds = 0;
+function countTimer() {
+           ++totalSeconds;
+           var hour = Math.floor(totalSeconds /3600);
+           var minute = Math.floor((totalSeconds - hour*3600)/60);
+           var seconds = totalSeconds - (hour*3600 + minute*60);
+           if(hour < 10)
+             hour = "0"+hour;
+           if(minute < 10)
+             minute = "0"+minute;
+           if(seconds < 10)
+             seconds = "0"+seconds;
+           document.getElementById("timer").innerHTML = hour + ":" + minute + ":" + seconds;
+        }
+    </script>
+<div id="timer"></div>
+<div id ="stop_timer" onclick="clearInterval(timerVar)">Stop time</div>
+  
 
 
 <form action="/course-Algorithms_and_Flowcharts-pretest/submit" method="post" autocomplete="off" > 
