--- a/views/student/layouts/recommen_Competency.ejs
+++ b/views/student/layouts/recommen_Competency.ejs
@@ -16,7 +16,7 @@
         padding: .5rem;
     }
     .comth {
-        width: 150px;
+        width: 200px;
         border: 1px solid #000;
         padding: .5rem;
         text-align: center;
@@ -28,41 +28,64 @@
    </style>
 
 
-   
-
     <table class="com">
         <tr>
-          <th class="quiz">Quiz</th>
-          <th class="comth">Knowledge</th>
-          <th class="comth">Tracing</th>
-          <th class="comth">Explaining</th>
+            <th class="quiz">Quiz</th>
+            <th class="comth">Knowledge</th>
+            <th class="comth">Tracing</th>
+            <th class="comth">Explaining</th>
         </tr>
         <tr>
-        <td>Algorithms and Flowcharts</td>
-        
+            <td>Algorithms and Flowcharts</td>
+            <td><a class="comth" href="/course-Algorithms_and_Flowcharts#Knowledge" type="button" >Go to exercise</a></td>
+            <td><a class="comth" href="/course-Algorithms_and_Flowcharts#Tracing" type="button" >Go to exercise</a></td>
+            <td><a class="comth" href="/course-Algorithms_and_Flowcharts#Explaining" type="button" >Go to exercise</a></td>
         </tr>
         <tr>
-          <td>Datatype and Variable</td>  
+            <td>Datatype and Variable</td>  
+            <td><a class="comth" href="/course-Datatype_and_Variable#Knowledge" type="button" >Go to exercise</a></td>
+            <td><a class="comth" href="/course-Datatype_and_Variable#Tracing" type="button" >Go to exercise</a></td>
+            <td><a class="comth" href="/course-Datatype_and_Variable#Explaining" type="button" >Go to exercise</a></td>
         </tr>
         <tr>
-           <td>Input and Output</td> 
+            <td>Input and Output</td> 
+            <td><a class="comth" href="/course-Input_and_Output#Knowledge" type="button" >Go to exercise</a></td>
+            <td><a class="comth" href="/course-Input_and_Output#Tracing" type="button" >Go to exercise</a></td>
+            <td><a class="comth" href="/course-Input_and_Output#Explaining" type="button" >Go to exercise</a></td>
         </tr>
         <tr>
             <td>Operators and Expressions</td>
+            <td><a class="comth" href="/course-Operators_and_Expressions#Knowledge" type="button" >Go to exercise</a></td>
+            <td><a class="comth" href="/course-Operators_and_Expressions#Tracing" type="button" >Go to exercise</a></td>
+            <td><a class="comth" href="/course-Operators_and_Expressions#Explaining" type="button" >Go to exercise</a></td>
         </tr>
         <tr>
-           <td>Selection Statements</td> 
+            <td>Selection Statements</td> 
+            <td><a class="comth" href="/course-Selection_Statements#Knowledge" type="button" >Go to exercise</a></td>
+            <td><a class="comth" href="/course-Selection_Statements#Tracing" type="button" >Go to exercise</a></td>
+            <td><a class="comth" href="/course-Selection_Statements#Explaining" type="button" >Go to exercise</a></td>
         </tr>
         <tr>
             <td>Loop Statements</td>
+            <td></td>
+            <td></td>
+            <td></td>
         </tr>
         <tr>
             <td>Array and String</td>
+            <td></td>
+            <td></td>
+            <td></td>
         </tr>
         <tr>
             <td>Functions</td>
+            <td></td>
+            <td></td>
+            <td></td>
         </tr>
       </table>
+
+      
 
       <br><br>
 
