--- a/views/student/layouts/course-middle_Score.ejs
+++ b/views/student/layouts/course-middle_Score.ejs
@@ -5,7 +5,8 @@ if(Object.keys(StudentAnswer).length === 0) {
 else {
     %>
     <div id = "content" class="container">
-        <h1 id = 'content'> Assignment Status </h1>     
+        <h1 id = 'content'> Assignment Status </h1>   
+        <h6>ส่วนที่ยังไม่ผ่าน (เครื่องหมาย X) ให้ดูที่ตาราง Competency Recommendation ด้านล่างแล้วไปยังแบบฝึกหัดในส่วนที่ยังไม่ผ่านได้เลย</h6>  
         <div class="box bg-light  mb-5 shadow" >
         <table class="table text-center">
             <thead>
