--- a/views/student/layouts/recommen_Competency.ejs
+++ b/views/student/layouts/recommen_Competency.ejs
@@ -1,8 +1,9 @@
 <div id = "content" class="container">
     <br>
-    <h1 id = 'content'><i class="far fa-sun"></i>Competency Recommendation </h1> 
+    <h1 id = 'content'>Competency Recommendation </h1> 
+    <h5>คลิก Go to Exercise เพื่อไปยังแบบทดสอบในส่วนที่ยังไม่ผ่าน</h5>
+   
    <style>
-
     .com {
         background-color: #fdfdfd;
         border: 1px solid #000;
@@ -27,6 +28,47 @@
     }
    </style>
 
+<script src="https://cdn.anychart.com/releases/8.11.0/js/anychart-core.min.js"></script>
+    <script src="https://cdn.anychart.com/releases/8.11.0/js/anychart-heatmap.min.js"></script> 
+    <style type="text/css">      
+      html, body, #container { 
+        width: 100%; margin: 0; padding: 0; 
+      } 
+    </style>
+    
+    <div id="container"></div>
+    <script>
+      anychart.onDocumentReady(function () {
+        // create a heatmap
+        let chart = anychart.heatMap(getData());
+        // name the heatmap
+        // set the container for the heatmap
+        chart.container("container");
+        // draw the heatmap
+        chart.draw();
+      });
+      // add the data
+      function getData() {
+        return [
+          {
+            x: "Monday",
+            y: "Algorithms and Flowcharts",
+            heat: 705
+          },
+          {
+            x: "Tuesday",
+            y: "Algorithms and Flowcharts",
+            heat: 641
+          },
+          {
+            x: "Wednesday",
+            y: "Algorithms and Flowcharts",
+            heat: 465
+          }
+        ];
+      }
+    </script>
+    <br>
 
     <table class="com">
         <tr>
@@ -40,6 +82,7 @@
             <td><a class="comth" href="/course-Algorithms_and_Flowcharts#Knowledge" type="button" >Go to exercise</a></td>
             <td><a class="comth" href="/course-Algorithms_and_Flowcharts#Tracing" type="button" >Go to exercise</a></td>
             <td><a class="comth" href="/course-Algorithms_and_Flowcharts#Explaining" type="button" >Go to exercise</a></td>
+            
         </tr>
         <tr>
             <td>Datatype and Variable</td>  
@@ -85,6 +128,7 @@
         </tr>
       </table>
 
+      
       
 
       <br><br>
