--- a/views/index/index_student.ejs
+++ b/views/index/index_student.ejs
@@ -141,7 +141,7 @@
         </div>    
                 
        
-        
+        <br>
         
    
     
@@ -212,6 +212,8 @@
             <a style="color: black;" href="/project-Ticket_Booking_System"> Ticket Booking System</a>
         </div>-->
 
+        <p>ติดต่ออาจารย์ <br>E-mail: <a href="mailto:todsapon.b@bumail.net">todsapon.b@bumail.net</a></p>
+        <br>
        
     </div>
     </div>
