--- a/views/student/layouts/course-middle.ejs
+++ b/views/student/layouts/course-middle.ejs
@@ -10,6 +10,46 @@
         color: blueviolet;
         font-size: large;
     }
+    .scrollbtnK {
+        width: 40px;
+        text-align: center;
+        background-color: #eaec73;
+        border-radius: 5px;
+        border: solid;
+        margin-right: 5px;
+        margin-top: 5px;
+    }
+    .scrollbtnT {
+        width: 40px;
+        text-align: center;
+        background-color: #6ecfd8;
+        border-radius: 5px;
+        border: solid;
+        margin-right: 5px;
+        margin-top: 5px;
+    }
+    .scrollbtnE {
+        width: 40px;
+        text-align: center;
+        background-color: #ffb8f8;
+        border-radius: 5px;
+        border: solid;
+        margin-right: 5px;
+        margin-top: 5px;
+    }
+    .scrollbtnW {
+        width: 40px;
+        text-align: center;
+        background-color: #a0de87;
+        border-radius: 5px;
+        border: solid;
+        margin-right: 5px;
+        margin-top: 5px;
+    }
+    .wrapbox.auto {
+        margin-left: 60px;
+        margin-bottom: 20px;
+    }
 </style>
 
 <div id = "content" class="container">
@@ -32,49 +72,87 @@
                                     <br><a href="/course-Algorithms_and_Flowcharts-pretest">แบบทดสอบก่อนเรียน</a>
                                     <br><a href="/course-Algorithms_and_Flowcharts">เนื้อหาบทเรียน</a>
                                     <br><a href="/course-Algorithms_and_Flowcharts-quiz">แบบทดสอบหลังเรียน</a>
+                                    <br>
+                                    <a href="/course-Algorithms_and_Flowcharts#Knowledge" class="scrollbtnK"  type="button">K</a>
+                                    <a href="/course-Algorithms_and_Flowcharts#Tracing" class="scrollbtnT"  type="button">T</a>
+                                    <a href="/course-Algorithms_and_Flowcharts#Explaining" class="scrollbtnE"  type="button">E</a>
                                 </p>
                                 <p class="wrapbox auto">
                                     <b>2. Datatype and Variable </b>
                                     <br><a href="/course-Datatype_and_Variable-pretest">แบบทดสอบก่อนเรียน</a>
-                                    <br><a href="/course-Datatype_and_Variable">เนื้อหาบทเรียน </a>
+                                    <br><a href="/course-Datatype_and_Variable">เนื้อหาบทเรียน</a>
                                     <br><a href="/course-Datatype_and_Variable-quiz">แบบทดสอบหลังเรียน</a>
-                                    <br><br>
+                                    <br>
+                                    <a href="/course-Datatype_and_Variable#Knowledge" class="scrollbtnK"  type="button">K</a>
+                                    <a href="/course-Datatype_and_Variable#Tracing" class="scrollbtnT"  type="button">T</a>
+                                    <a href="/course-Datatype_and_Variable#Explaining" class="scrollbtnE"  type="button">E</a>
+                                    <a href="/course-Datatype_and_Variable#Writing" class="scrollbtnW" type="button">W</a>
                                  </p>   
                                     <p class="wrapbox auto">
                                     <b>3. Input and Output</b>
                                     <br><a href="/course-Input_and_Output-pretest">แบบทดสอบก่อนเรียน</a>
                                     <br><a href="/course-Input_and_Output">เนื้อหาบทเรียน</a>
                                     <br><a href="/course-Input_and_Output-quiz">แบบทดสอบหลังเรียน</a>
+                                    <br>
+                                    <a href="/course-Input_and_Output#Knowledge" class="scrollbtnK" type="button">K</a>
+                                    <a href="/course-Input_and_Output#Tracing" class="scrollbtnT" type="button">T</a>
+                                    <a href="/course-Input_and_Output#Explaining" class="scrollbtnE" type="button">E</a>
+                                    <a href="/course-Input_and_Output#Writing" class="scrollbtnW" type="button">W</a>
                                 </p>
                                 <p class="wrapbox auto">
                                     <b>4. Operators and Expressions</b>
                                     <br><a href="/course-Operators_and_Expressions-pretest">แบบทดสอบก่อนเรียน</a>
                                     <br><a href="/course-Operators_and_Expressions">เนื้อหาบทเรียน</a>
                                     <br><a href="/course-Operators_and_Expressions-quiz">แบบทดสอบหลังเรียน</a>
-                                </p>
+                                    <br>
+                                    <a href="/course-Operators_and_Expressions#Knowledge" class="scrollbtnK"  type="button">K</a>
+                                    <a href="/course-Operators_and_Expressions#Tracing" class="scrollbtnT"  type="button">T</a>
+                                    <a href="/course-Operators_and_Expressions#Explaining" class="scrollbtnE"  type="button">E</a>
+                                    <a href="/course-Operators_and_Expressions#Writing" class="scrollbtnW" type="button">W</a>
+                                </p><br>
                                 <p class="wrapbox auto">
                                     <b>5. Selection Statements </b>
                                     <br><a href="/course-Selection_Statements-pretest">แบบทดสอบก่อนเรียน</a>
                                     <br><a href="/course-Selection_Statements">เนื้อหาบทเรียน</a>
                                     <br><a href="/course-Selection_Statements-quiz">แบบทดสอบหลังเรียน</a>
+                                    <br>
+                                    <a href="/course-Selection_Statements#Knowledge" class="scrollbtnK"  type="button">K</a>
+                                    <a href="/course-Selection_Statements#Tracing" class="scrollbtnT"  type="button">T</a>
+                                    <a href="/course-Selection_Statements#Explaining" class="scrollbtnE"  type="button">E</a>
+                                    <a href="/course-Selection_Statements#Writing" class="scrollbtnW" type="button">W</a>
                                 </p>
                                 <p class="wrapbox auto">
                                     <b>6. Loop Statements </b>
                                     <br><a href="/course-Loop_Statements-pretest">แบบทดสอบก่อนเรียน</a>
                                     <br><a href="/course-Loop_Statements"> เนื้อหาบทเรียน</a>
                                     <br><a href="/course-Loop_Statements-quiz">แบบทดสอบหลังเรียน</a>
+                                    <br>
+                                    <a href="/course-Loop_Statements#Knowledge" class="scrollbtnK"  type="button">K</a>
+                                    <a href="/course-Loop_Statements#Tracing" class="scrollbtnT"  type="button">T</a>
+                                    <a href="/course-Loop_Statements#Explaining" class="scrollbtnE"  type="button">E</a>
+                                    <a href="/course-Loop_Statements#Writing" class="scrollbtnW" type="button">W</a>
                                 </p>
                                 <p class="wrapbox auto">
                                     <b>7. Array and String </b>
                                     <br><a href="/course-Arrays_and_Strings-pretest">แบบทดสอบก่อนเรียน</a>
                                     <br><a href="/course-Arrays_and_Strings">เนื้อหาบทเรียน</a>
                                     <br><a href="/course-Arrays_and_Strings-quiz">แบบทดสอบหลังเรียน</a>
+                                    <br>
+                                    <a href="/course-Arrays_and_Strings#Knowledge" class="scrollbtnK"  type="button">K</a>
+                                    <a href="/course-Arrays_and_Strings#Tracing" class="scrollbtnT"  type="button">T</a>
+                                    <a href="/course-Arrays_and_Strings#Explaining" class="scrollbtnE"  type="button">E</a>
+                                    <a href="/course-Arrays_and_Strings#Writing" class="scrollbtnW" type="button">W</a>
                                 </p>
                                 <p class="wrapbox auto">
                                     <b>8. Functions </b>
                                     <br><a href="/course-Functions-pretest">แบบทดสอบก่อนเรียน</a>
                                     <br><a href="/course-Functions">เนื้อหาบทเรียน</a>
                                     <br><a href="/course-Functions-quiz">แบบทดสอบหลังเรียน</a>
+                                    <br>
+                                    <a href="/course-Functions#Knowledge" class="scrollbtnK"  type="button">K</a>
+                                    <a href="/course-Functions#Tracing" class="scrollbtnT"  type="button">T</a>
+                                    <a href="/course-Functions#Explaining" class="scrollbtnE"  type="button">E</a>
+                                    <a href="/course-Functions#Writing" class="scrollbtnW" type="button">W</a>
                                 </p>
                                 <!--<p class="wrapbox auto">
                                     <b>8. Functions </b>
