--- a/views/student/layouts/course-middle_Score.ejs
+++ b/views/student/layouts/course-middle_Score.ejs
@@ -6,7 +6,8 @@ else {
     %>
     <div id = "content" class="container">
         <h1 id = 'content'> Assignment Status </h1>   
-        <h5>ส่วนที่ยังไม่ผ่าน (เครื่องหมาย X) ให้ดูที่ตาราง Competency Recommendation ด้านล่างแล้วไปยังแบบฝึกหัดในส่วนที่ยังไม่ผ่านได้เลย</h5>  
+        <h5>ในส่วนที่ยังไม่ผ่าน (ช่องที่เป็นเครื่องหมาย x) ให้เข้าไปฝึกทำแบบฝึกหัดเพิ่มเติม</h5>
+
         <div class="box bg-light  mb-5 shadow" >
         <table class="table text-center">
             <thead>
@@ -97,3 +98,4 @@ else {
  
 
  <% } %>
+
