--- a/views/student/course/6_Loop_Statements-course.ejs
+++ b/views/student/course/6_Loop_Statements-course.ejs
@@ -54,17 +54,13 @@
         <div id = "content" class="container">
             <h1>บทที่ 6 Loop Statements</h1>
             <b>แบบฝึกหัด</b>
-            <a href="/course-Selection_Statements#Knowledge" class="scrollbtnK"  type="button"  >
-                Knowledge
+            <a href="/course-Loop_Statements#Knowledge" class="scrollbtnK"  type="button"  >Knowledge
             </a>
-            <a href="/course-Selection_Statements#Tracing" class="scrollbtnT"  type="button"  >
-                Tracing
+            <a href="/course-Loop_Statements#Tracing" class="scrollbtnT"  type="button"  >Tracing
             </a>
-            <a href="/course-Selection_Statements#Explaining" class="scrollbtnE"  type="button"  >
-                Explaining
+            <a href="/course-Loop_Statements#Explaining" class="scrollbtnE"  type="button"  >Explaining
             </a>
-            <a href="/course-Selection_Statements#Writing" class="scrollbtnW" type="button"  >
-                Writing
+            <a href="/course-Loop_Statements#Writing" class="scrollbtnW" type="button"  >Writing
             </a>
 
             <div class="accordion" id="accordionParentSyntax">
